fixed overlapping issue on mobile

--- a/Css/index.css
+++ b/Css/index.css
@@ -15,6 +15,7 @@ nav {
   align-content: center;
   width: 100%;
   height: 58px;
+  z-index: 5;
 }
 nav .logo {
   height: 100%;
@@ -90,6 +91,7 @@ nav .active {
 }
 .header .phone-container {
   position: relative;
+  z-index: 3;
 }
 .header .phone-container .iphone {
   width: 250px;
