--- a/Less/components/main.less
+++ b/Less/components/main.less
@@ -24,6 +24,7 @@
 
     .phone-container{
         position: relative;
+        z-index: 3;
         .iphone{
             width:250px;
         }
