--- a/Less/components/nav.less
+++ b/Less/components/nav.less
@@ -10,7 +10,7 @@ nav{
     align-content: center;
     width: 100%;
     height: @nav-height-mobile;
-
+    z-index: 5;
     .logo{
         height: 100%;
         padding: 10px;
